# python-ems

./: AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py
ems/: __init__.py  api.py  exceptions.py  version.py
ems/api/: __init__.py  contacts.py  customers.py
ems/schema/: __init__.py  base.py  fields.py  restrictions.py
ems/types/: __init__.py  authentication.py  contacts.py  customers.py  entitlements.py  errors.py  login.py  users.py
