[metadata]
name = ems
author = Joshua Griffiths
author-email = jgriffiths@jgrif.eu
summary = Sentinel EMS Client

#description-file =
#    README.rst

classifier = 
    Development Status :: 5 - Production/Stable
    Environment :: Sentinel EMS
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approvied :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    
[files]
packages = 
    ems

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]    
warnerrors = True

[wheel]
universal = 1
